# xterm256-colors

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
tests/xterm256_colors/: test_colors.py
xterm256_colors/: __init__.py  _compat.py  colors.py  constants.py  types.py  utils.py
